src/tests/function-declarations/3.txt
function-declarations/3.c:6:1: error: redefinition of function 'f'
 float f(int a, int b) {
 ^
function-declarations/3.c:10:1: error: redefinition of function 'f'
 char f(int a, int b) {
 ^
